Compiler/src/main/java/Testing/Tests/SemanticTests/failing/DuplicateConstructor.ru
/? Descripción: caso de prueba que verifica que no se declaren dos constructores
/? Salida esperada:
/? ERROR: SEMÁNTICO - DECLARACIONES
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | Linea 10 | COLUMNA 1 | EL CONSTRUCTOR YA ESTA DECLARADO EN ESTE ALCANCE

struct B{}
impl B{
.(){}
.(Int a){}}
start{}